--- a/src/app/features/dashboard/components/datatable/datatable.component.html
+++ b/src/app/features/dashboard/components/datatable/datatable.component.html
@@ -69,8 +69,8 @@
     </div>
 } @else {
     <div class="flex w-full flex-col items-center gap-2">
-        <p class="text-black text-lg font-bold leading-tight tracking-[-0.015em] max-w-[480px] text-center">No existen materias registradas aún</p>
-        <p class="text-black text-sm font-normal leading-normal max-w-[480px] text-center">Se deben agregar materias al sistema y así podras verlas acá</p>
+        <p class="text-black text-lg font-bold leading-tight tracking-[-0.015em] max-w-[480px] text-center">No existen registros aún</p>
+        <p class="text-black text-sm font-normal leading-normal max-w-[480px] text-center">Se deben agregar registros al sistema y así podras verlos acá</p>
     </div>
 }
 
