add dashboard page component, update routing, and enhance register courses functionality

--- a/src/app/features/students/pages/register-courses/register-courses.component.html
+++ b/src/app/features/students/pages/register-courses/register-courses.component.html
@@ -1,1 +1,95 @@
-<p>register-courses works!</p>
+<div class="flex flex-wrap justify-between gap-3 p-4">
+    <p class="text-black tracking-light text-[32px] font-bold leading-tight min-w-72">Registra tus clases</p>
+</div>
+<div class="px-4 py-3">
+    <label class="flex flex-col min-w-40 h-12 w-full">
+        <div class="flex w-full flex-1 items-stretch rounded-xl h-full">
+            <div class="text-[#6B6B6B] flex border-none bg-[#EEEEEE] items-center justify-center pl-4 rounded-l-xl border-r-0"
+                data-icon="MagnifyingGlass" data-size="24px" data-weight="regular">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor"
+                    viewBox="0 0 256 256">
+                    <path
+                        d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z">
+                    </path>
+                </svg>
+            </div>
+            <input placeholder="Busca tus clases"
+                class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-black focus:outline-0 focus:ring-0 border-none bg-[#EEEEEE] focus:border-none h-full placeholder:text-[#6B6B6B] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
+                value="" />
+        </div>
+    </label>
+</div>
+<h3 class="text-black text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">Results</h3>
+@for (schedule of schedules(); track schedule.id) {
+    <div class="flex items-center gap-4 bg-[#FFFFFF] px-4 min-h-[72px] py-2 justify-between">
+        <div class="flex items-center gap-4">
+            <div class="text-black flex items-center justify-center rounded-lg bg-[#EEEEEE] shrink-0 size-12"
+                data-icon="Book" data-size="24px" data-weight="regular">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor"
+                    viewBox="0 0 256 256">
+                    <path
+                        d="M208,24H72A32,32,0,0,0,40,56V224a8,8,0,0,0,8,8H192a8,8,0,0,0,0-16H56a16,16,0,0,1,16-16H208a8,8,0,0,0,8-8V32A8,8,0,0,0,208,24Zm-8,160H72a31.82,31.82,0,0,0-16,4.29V56A16,16,0,0,1,72,40H200Z">
+                    </path>
+                </svg>
+            </div>
+            <div class="flex flex-col justify-center">
+                <p class="text-black text-base font-medium leading-normal line-clamp-1">{{schedule.id}}</p>
+                <p class="text-[#6B6B6B] text-sm font-normal leading-normal line-clamp-2">{{schedule.courseName}}: {{transformNumberToHour(schedule.startHour)}} - {{transformNumberToHour(schedule.endHour)}}</p>
+            </div>
+        </div>
+        <div class="shrink-0">
+            <button
+                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-8 px-4 bg-[#EEEEEE] text-black text-sm font-medium leading-normal w-fit">
+                <span class="truncate" (click)="registerStudentInCourse(schedule)">Add</span>
+            </button>
+        </div>
+    </div>
+}
+<h3 class="text-black text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">My Schedule</h3>
+<div class="flex items-center gap-4 bg-[#FFFFFF] px-4 min-h-14 justify-between">
+    <div class="flex items-center gap-4">
+        <div class="text-black flex items-center justify-center rounded-lg bg-[#EEEEEE] shrink-0 size-10"
+            data-icon="Book" data-size="24px" data-weight="regular">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor"
+                viewBox="0 0 256 256">
+                <path
+                    d="M208,24H72A32,32,0,0,0,40,56V224a8,8,0,0,0,8,8H192a8,8,0,0,0,0-16H56a16,16,0,0,1,16-16H208a8,8,0,0,0,8-8V32A8,8,0,0,0,208,24Zm-8,160H72a31.82,31.82,0,0,0-16,4.29V56A16,16,0,0,1,72,40H200Z">
+                </path>
+            </svg>
+        </div>
+        <p class="text-black text-base font-normal leading-normal flex-1 truncate">MATH 1A - 001</p>
+    </div>
+    <div class="shrink-0">
+        <button
+            class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-8 px-4 bg-[#EEEEEE] text-black text-sm font-medium leading-normal w-fit">
+            <span class="truncate">Remove</span>
+        </button>
+    </div>
+</div>
+<div class="flex items-center gap-4 bg-[#FFFFFF] px-4 min-h-14 justify-between">
+    <div class="flex items-center gap-4">
+        <div class="text-black flex items-center justify-center rounded-lg bg-[#EEEEEE] shrink-0 size-10"
+            data-icon="Book" data-size="24px" data-weight="regular">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor"
+                viewBox="0 0 256 256">
+                <path
+                    d="M208,24H72A32,32,0,0,0,40,56V224a8,8,0,0,0,8,8H192a8,8,0,0,0,0-16H56a16,16,0,0,1,16-16H208a8,8,0,0,0,8-8V32A8,8,0,0,0,208,24Zm-8,160H72a31.82,31.82,0,0,0-16,4.29V56A16,16,0,0,1,72,40H200Z">
+                </path>
+            </svg>
+        </div>
+        <p class="text-black text-base font-normal leading-normal flex-1 truncate">MATH 1A - 001</p>
+    </div>
+    <div class="shrink-0">
+        <button
+            class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-8 px-4 bg-[#EEEEEE] text-black text-sm font-medium leading-normal w-fit">
+            <span class="truncate">Remove</span>
+        </button>
+    </div>
+</div>
+<p class="text-black text-base font-normal leading-normal pb-3 pt-1 px-4">Total Credits: 8</p>
+<div class="flex px-4 py-3">
+    <button
+        class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 flex-1 bg-black text-[#FFFFFF] text-sm font-bold leading-normal tracking-[0.015em]">
+        <span class="truncate">Submit</span>
+    </button>
+</div>
