--- a/src/app/features/students/pages/register-courses/register-courses.component.html
+++ b/src/app/features/students/pages/register-courses/register-courses.component.html
@@ -46,50 +46,38 @@
     </div>
 }
 <h3 class="text-black text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4">My Schedule</h3>
-<div class="flex items-center gap-4 bg-[#FFFFFF] px-4 min-h-14 justify-between">
-    <div class="flex items-center gap-4">
-        <div class="text-black flex items-center justify-center rounded-lg bg-[#EEEEEE] shrink-0 size-10"
-            data-icon="Book" data-size="24px" data-weight="regular">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor"
-                viewBox="0 0 256 256">
-                <path
-                    d="M208,24H72A32,32,0,0,0,40,56V224a8,8,0,0,0,8,8H192a8,8,0,0,0,0-16H56a16,16,0,0,1,16-16H208a8,8,0,0,0,8-8V32A8,8,0,0,0,208,24Zm-8,160H72a31.82,31.82,0,0,0-16,4.29V56A16,16,0,0,1,72,40H200Z">
-                </path>
-            </svg>
+@for (subject of subjectsToRegister(); track subject.id) {
+    <div class="flex items-center gap-4 bg-[#FFFFFF] px-4 min-h-14 justify-between">
+        <div class="flex items-center gap-4">
+            <div class="text-black flex items-center justify-center rounded-lg bg-[#EEEEEE] shrink-0 size-10"
+                data-icon="Book" data-size="24px" data-weight="regular">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor"
+                    viewBox="0 0 256 256">
+                    <path
+                        d="M208,24H72A32,32,0,0,0,40,56V224a8,8,0,0,0,8,8H192a8,8,0,0,0,0-16H56a16,16,0,0,1,16-16H208a8,8,0,0,0,8-8V32A8,8,0,0,0,208,24Zm-8,160H72a31.82,31.82,0,0,0-16,4.29V56A16,16,0,0,1,72,40H200Z">
+                    </path>
+                </svg>
+            </div>
+            <p class="text-black text-base font-normal leading-normal flex-1 truncate">{{subject.name}}</p>
         </div>
-        <p class="text-black text-base font-normal leading-normal flex-1 truncate">MATH 1A - 001</p>
-    </div>
-    <div class="shrink-0">
-        <button
-            class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-8 px-4 bg-[#EEEEEE] text-black text-sm font-medium leading-normal w-fit">
-            <span class="truncate">Remove</span>
-        </button>
-    </div>
-</div>
-<div class="flex items-center gap-4 bg-[#FFFFFF] px-4 min-h-14 justify-between">
-    <div class="flex items-center gap-4">
-        <div class="text-black flex items-center justify-center rounded-lg bg-[#EEEEEE] shrink-0 size-10"
-            data-icon="Book" data-size="24px" data-weight="regular">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor"
-                viewBox="0 0 256 256">
-                <path
-                    d="M208,24H72A32,32,0,0,0,40,56V224a8,8,0,0,0,8,8H192a8,8,0,0,0,0-16H56a16,16,0,0,1,16-16H208a8,8,0,0,0,8-8V32A8,8,0,0,0,208,24Zm-8,160H72a31.82,31.82,0,0,0-16,4.29V56A16,16,0,0,1,72,40H200Z">
-                </path>
-            </svg>
+        <div class="shrink-0">
+            <button
+                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-8 px-4 bg-[#EEEEEE] text-black text-sm font-medium leading-normal w-fit">
+                <span class="truncate">Remove</span>
+            </button>
         </div>
-        <p class="text-black text-base font-normal leading-normal flex-1 truncate">MATH 1A - 001</p>
     </div>
-    <div class="shrink-0">
-        <button
-            class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-8 px-4 bg-[#EEEEEE] text-black text-sm font-medium leading-normal w-fit">
-            <span class="truncate">Remove</span>
-        </button>
+} @empty {
+    <div class="flex items-center justify-center bg-[#FFFFFF] px-4 min-h-14">
+        <p class="text-black text-base font-normal leading-normal">No courses registered</p>
     </div>
-</div>
-<p class="text-black text-base font-normal leading-normal pb-3 pt-1 px-4">Total Credits: 8</p>
+}
+@if (subjectsToRegister().length > 0) {
+    <p class="text-black text-base font-normal leading-normal pb-3 pt-1 px-4">Total Credits: {{totalCredits()}}</p>
+}
 <div class="flex px-4 py-3">
     <button
         class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 flex-1 bg-black text-[#FFFFFF] text-sm font-bold leading-normal tracking-[0.015em]">
-        <span class="truncate">Submit</span>
+        <span class="truncate" (click)="registerSchedule()">Submit</span>
     </button>
 </div>
